<resources>
    <string name="app_name">Mensa Eventi</string>
    <string name="account">mensa_eventi</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="date_label">dal %1$s al %2$s</string>
    <string name="date_time_label">%1$s: %2$s-%3$s</string>
    <string name="label_description">Descrizione</string>
    <string name="label_open_maps">Raggiungi l\'evento</string>
    <string name="label_hotels">Hotels</string>
    <string name="label_hotels_search">Filtra Hotels</string>
    <string name="label_suggestions">Ti potrebbe interessare…</string>
    <string name="label_suggestions_filter">Filtra suggerimenti</string>
    <string name="label_activities">Calendario</string>
    <string name="label_no_data">Nessun elemento trovato con questa chiave di ricerca</string>
    <string name="label_contacts">Contatti</string>
    <string name="label_mensa_event">Mensa Eventi</string>
    <string name="email_title">Invia una email</string>
    <string name="no_events_label">Non ci sono eventi da visualizzare. Riprovare più tardi</string>
    <string name="no_data_event_label">Dettagli evento non disponibili</string>
    <string name="label_time_00">00:00</string>
    <string name="label_time_01">01:00</string>
    <string name="label_time_02">02:00</string>
    <string name="label_time_03">03:00</string>
    <string name="label_time_04">04:00</string>
    <string name="label_time_05">05:00</string>
    <string name="label_time_06">06:00</string>
    <string name="label_time_07">07:00</string>
    <string name="label_time_08">08:00</string>
    <string name="label_time_09">09:00</string>
    <string name="label_time_10">10:00</string>
    <string name="label_time_11">11:00</string>
    <string name="label_time_12">12:00</string>
    <string name="label_time_13">13:00</string>
    <string name="label_time_14">14:00</string>
    <string name="label_time_15">15:00</string>
    <string name="label_time_16">16:00</string>
    <string name="label_time_17">17:00</string>
    <string name="label_time_18">18:00</string>
    <string name="label_time_19">19:00</string>
    <string name="label_time_20">20:00</string>
    <string name="label_time_21">21:00</string>
    <string name="label_time_22">22:00</string>
    <string name="label_time_23">23:00</string>
    <string name="label_time_24">24:00</string>
    <string name="label_start_share_position">Inizio condivisione posizione…</string>
    <string name="label_location_update">Posizione attuale: %1$f, %2$f</string>
    <string name="label_remove_location_updates">stop</string>
    <string name="label_login">login</string>
    <string name="label_check_in">Check-in</string>
    <string name="label_qr_code">Inquadra il QR-code</string>
    <string name="confirm_label">Conferma</string>
    <string name="cancel_label">Annulla</string>
    <string name="insert_your_data_label">Inserisci i tuoi dati</string>
    <string name="name_label">Nome</string>
    <string name="surname_label">Cognome</string>
    <string name="mensa_id_label">Mensa ID</string>
    <string name="mandatory_label">Obbligatorio</string>
    <string name="label_show_map">Visualizza mappa</string>
    <string name="message_share_your_position">Per visualizzare la posizione degli altri devi attivare la condivisione della tua posizione</string>
    <string name="location_service_off">La condivisione della posizione è stata fermata.</string>
    <string name="label_share_position">Condividi posizione</string>
    <string name="label_shared_position">Posizione condivisa</string>
    <string name="label_sharing_loading">Caricamento…</string>
    <string name="error_qr_code_read">Il QR-Code scansionato non è associato a questo evento.</string>
    <string name="error_qr_code_json">QR-Code non valido</string>

    <plurals name="label_number_of_people_sharing">
        <item quantity="zero" formatted="true">0 persone</item>
        <item quantity="one" formatted="true">1 persona</item>
        <item quantity="other" formatted="true">%1$d persone</item>
    </plurals>

</resources>