<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.events.EventDetailFragment">
    <!-- TODO RIFARE CON COORDINATOR e COLLAPSING TOOLBAR-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/event_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#5778"
            app:layout_constraintDimensionRatio="7:4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/event_year"
            style="@style/big_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@id/event_image"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="2022" />

        <TextView
            android:id="@+id/event_name"
            style="@style/big_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@id/event_image"
            app:layout_constraintEnd_toStartOf="@id/event_year"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="ROMA" />

        <TextView
            android:id="@+id/description_label"
            style="@style/medium_title.bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/label_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_image" />

        <TextView
            android:id="@+id/event_description"
            style="@style/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_label"
            tools:text="LOREM IPSUM" />

        <TextView
            android:id="@+id/event_activities_label"
            style="@style/medium_title.bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/label_activities"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/event_activity_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_activities_label" />

        <TextView
            android:id="@+id/event_position"
            style="@style/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/label_open_maps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_activity_list" />

        <TextView
            android:id="@+id/event_hotels"
            style="@style/medium_title.bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/label_hotels"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_position" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/event_hotels_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_hotels" />

        <TextView
            android:id="@+id/event_suggestions"
            style="@style/medium_title.bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/label_suggestions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_hotels_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/event_suggestions_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_suggestions" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>