<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/collapsing_open_dimen"
        android:theme="@style/AppTheme">

        <include
            android:id="@+id/event_details_toolbar"
            layout="@layout/toolbar_events_details" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.events.EventDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/calendar_days_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/background_days_pager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/primary_color_transparent"
                app:layout_constraintBottom_toBottomOf="@id/calendar_days_pager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calendar_days_tabs" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/calendar_days_pager"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calendar_days_tabs" />

            <TextView
                android:id="@+id/check_in"
                style="@style/LatoBold.24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_rounded_blue"
                android:drawableLeft="@drawable/ic_qrcode"
                android:drawablePadding="8dp"
                android:elevation="5dp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/label_check_in"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calendar_days_pager" />

            <TextView
                android:id="@+id/show_map"
                style="@style/LatoBold.24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_rounded_blue"
                android:drawableLeft="@drawable/ic_map"
                android:drawablePadding="8dp"
                android:elevation="5dp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/label_show_map"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calendar_days_pager" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/share_anchor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="show_map,check_in" />

<!--            <androidx.appcompat.widget.SwitchCompat-->
<!--                android:id="@+id/share_position"-->
<!--                style="@style/LatoRegular.14"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:layout_marginEnd="16dp"-->
<!--                android:text="@string/label_share_position"-->
<!--                android:visibility="gone"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/share_anchor" />-->

            <TextView
                android:id="@+id/description_label"
                style="@style/LatoBold.24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/label_description"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/share_anchor" />

            <TextView
                android:id="@+id/event_description"
                style="@style/LatoRegular.14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_label"
                tools:text="LOREM IPSUM" />

            <TextView
                android:id="@+id/event_hotels"
                style="@style/LatoBold.24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/label_hotels"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/event_hotels_list"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_hotels" />

            <swaix.dev.mensaeventi.utils.SearchBarLabel
                android:id="@+id/event_hotels_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:label="@string/label_hotels_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_hotels_list" />

            <TextView
                android:id="@+id/event_suggestions"
                style="@style/LatoBold.24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/label_suggestions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_hotels_search" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/event_suggestions_list"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_suggestions" />

            <swaix.dev.mensaeventi.utils.SearchBarLabel
                android:id="@+id/event_suggestions_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:label="@string/label_suggestions_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_suggestions_list" />

            <TextView
                android:id="@+id/event_contact_label"
                style="@style/LatoBold.24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/label_contacts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_suggestions_search" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/event_contact_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_contact_label" />

            <TextView
                android:id="@+id/empty_state_message"
                style="@style/LatoBold.24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/no_data_event_label"
                android:textColor="@color/gray_600"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>



